proxi/istio-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/auth"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: auth-service
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/order"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: order-service
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payment-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/payment"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: payment-service
        port:
          number: 80
